@@ -1,0 +1,3 @@
+PACKAGE=portmaker
+VERSION=0.1.0
+PREFIX=/usr
