@@ -1,3 +1,3 @@
 # mingwPORT.beforepatch
 # Add commands to prepare before patching the source
-PATCHFLAGS='-p 0'
+PATCHFLAGS="-p 1 -d ${SRCDIR}"
