@@ -1,3 +1,3 @@
 # mingwPORT.beforerpatch
 # Add commands to prepare before reverse patching the source
-PATCHFLAGS='-p 0'
+PATCHFLAGS="-p 1 -d ${SRCDIR}"
